--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -63,6 +63,7 @@
       <package>
         <name>pake</name>
         <channel>pear.indeyets.pp.ru</channel>
+        <min>1.5.0</min>
       </package>
     </required>
 
