--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -81,5 +81,20 @@
   </phprelease>
 
   <changelog>
+    <release>
+      <date>2010-12-17</date>
+      <version>
+        <release>1.0.0</release>
+        <api>1.0.0</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
+      <notes>
+        - initial release
+      </notes>
+    </release>
   </changelog>
 </package>
