--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -22,15 +22,16 @@
   <date>##CURRENT_DATE##</date>
   <version>
     <release>##INSTALLER_VERSION##</release>
-    <api>1.0.3</api>
+    <api>1.0.4</api>
   </version>
   <stability>
-    <release>beta</release>
+    <release>stable</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    -
+    - use midgard.http=Off mode for appserver (connection will be opened manually, per-process)
+    - remove explicit call to build_translations in "update" task, as translations are built during component-update phase
   </notes>
 
   <contents>
