--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -25,13 +25,12 @@
     <api>1.0.4</api>
   </version>
   <stability>
-    <release>stable</release>
+    <release>beta</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    - use midgard.http=Off mode for appserver (connection will be opened manually, per-process)
-    - remove explicit call to build_translations in "update" task, as translations are built during component-update phase
+    -
   </notes>
 
   <contents>
@@ -82,6 +81,22 @@
   </phprelease>
 
   <changelog>
+    <release>
+      <date>2011-01-27</date>
+      <version>
+        <release>1.0.4</release>
+        <api>1.0.4</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
+      <notes>
+        - use midgard.http=Off mode for appserver (connection will be opened manually, per-process)
+        - remove explicit call to build_translations in "update" task, as translations are built during component-update phase
+      </notes>
+    </release>
     <release>
       <date>2011-01-24</date>
       <version>
