--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -25,13 +25,12 @@
     <api>1.0.4</api>
   </version>
   <stability>
-    <release>stable</release>
+    <release>beta</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    - compatibility with extended schemas
-    - proper handling of php-5.3+ setups on ubuntu
+    -
   </notes>
 
   <contents>
@@ -82,6 +81,22 @@
   </phprelease>
 
   <changelog>
+    <release>
+      <date>2011-03-29</date>
+      <version>
+        <release>1.0.5</release>
+        <api>1.0.4</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
+      <notes>
+        - compatibility with extended schemas
+        - proper handling of php-5.3+ setups on ubuntu
+      </notes>
+    </release>
     <release>
       <date>2011-01-27</date>
       <version>
