moved to the new pear channel

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.4.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
   <name>midgardmvc_installer</name>
-  <channel>pear.indeyets.pp.ru</channel>
+  <channel>pear.indeyets.ru</channel>
   <summary>Midgard MVC Installer</summary>
   <description>
     Tool for extremely easy installation of Midgard MVC Applications
@@ -25,12 +25,12 @@
     <api>1.0.4</api>
   </version>
   <stability>
-    <release>beta</release>
+    <release>stable</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    -
+    - new PEAR channel
   </notes>
 
   <contents>
@@ -62,7 +62,7 @@
       </pearinstaller>
       <package>
         <name>pake</name>
-        <channel>pear.indeyets.pp.ru</channel>
+        <channel>pear.indeyets.ru</channel>
         <min>1.5.1</min>
       </package>
     </required>
