--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -25,12 +25,12 @@
     <api>1.0.4</api>
   </version>
   <stability>
-    <release>beta</release>
+    <release>stable</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    -
+    - db-classes detection fixes
   </notes>
 
   <contents>
