--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -25,12 +25,12 @@
     <api>1.0.4</api>
   </version>
   <stability>
-    <release>stable</release>
+    <release>beta</release>
     <api>stable</api>
   </stability>
   <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
   <notes>
-    - db-classes detection fixes
+    -
   </notes>
 
   <contents>
@@ -81,6 +81,21 @@
   </phprelease>
 
   <changelog>
+      <release>
+        <date>2011-10-27</date>
+        <version>
+          <release>1.0.7</release>
+          <api>1.0.4</api>
+        </version>
+        <stability>
+          <release>stable</release>
+          <api>stable</api>
+        </stability>
+        <license uri="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">GNU Lesser General Public License, version 2.1</license>
+        <notes>
+          - db-classes detection fixes
+        </notes>
+      </release>
     <release>
       <date>2011-09-13</date>
       <version>
